fixed date created put in new icons, fixed overflow issue, fixed html and put some inline styles for the createIssues component

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 *{
-  box-sizing: bo
+  box-sizing: border-box;
 }
 
-.container{
-  padding: 0 200px;
+
+.wrapper{
+  display: flex;
+  flex-direction: column;
 }
 .header{
   padding: 5px;
@@ -19,7 +21,7 @@
 
 .navbar a{
   color: white;
-  padding: 14px 20px;
+  padding: 5px 10px;
   text-decoration: none;
   text-align: center;
 }
@@ -29,15 +31,9 @@
   color: black;
 }
 
-.row{
-  background-color: #f2f2f2;
-}
 
 .row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
+  padding: 0px 30px;
 }
 
 .column {
